analysis/apache-ingress-secure.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: https-ingress
spec:
  tls:
  - hosts:
      - qsolutions.endoftheinternet.org
    secretName: qsolutions-secret-tls
  rules:
  - host: qsolutions.endoftheinternet.org
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: apache-service
            port:
              number: 80
  - host: southern.podzone.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kubernetes
            port:
              number: 443
